--- a/GanttChartLightLibraryDemos/Demos/Samples/WPF-CSharp/ScheduleChartDataGrid/MainFeatures/AppResources.xaml
+++ b/GanttChartLightLibraryDemos/Demos/Samples/WPF-CSharp/ScheduleChartDataGrid/MainFeatures/AppResources.xaml
@@ -1,22 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="RibbonContainerStyle" TargetType="Border">
-        <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="BorderBrush" Value="#ddd"/>
         <Setter Property="BorderThickness" Value="0,0,0,1"/>
     </Style>
     <Style x:Key="RibbonStyle" TargetType="StackPanel">
         <Setter Property="Orientation" Value="Horizontal"/>
-        <Setter Property="Background" Value="#909090"/>
+        <Setter Property="Background" Value="#fefefe"/>
     </Style>
     <Style x:Key="RibbonPanelStyle" TargetType="Border">
-        <Setter Property="Background" Value="#a0a0a0"/>
-        <Setter Property="BorderBrush" Value="#c0c0c0"/>
+        <Setter Property="Background" Value="#fefefe"/>
+        <Setter Property="BorderBrush" Value="#ddd"/>
         <Setter Property="BorderThickness" Value="0,0,1,0"/>
         <Setter Property="Padding" Value="0,0,0,2"/>
     </Style>
     <Style x:Key="RibbonHeaderStyle" TargetType="ContentControl">
-        <Setter Property="Background" Value="#808080"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Background" Value="#eee"/>
         <Setter Property="Padding" Value="4"/>
         <Setter Property="Margin" Value="0,0,0,2"/>
         <Setter Property="Template">
@@ -114,7 +113,7 @@
     <Style x:Key="RibbonComboBoxStyle" TargetType="ComboBox">
         <Setter Property="Margin" Value="1"/>
         <Setter Property="Padding" Value="4,2"/>
-        <Setter Property="Background" Value="#c0c0c0"/>
+        <Setter Property="Background" Value="#eee"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ComboBox">
